# toggle

./: LICENSE  README.md  pyproject.toml  requirements.txt
config/: h100_activation_svd.yaml  h100_activation_svd_qwen.yaml  h100_cp.yaml  h100_entropy_svd.yaml  h100_full_pipeline.yaml  h100_hybrid_mi.yaml  h100_tensor_train.yaml  h100_tucker.yaml  h100_weight_pruning.yaml
config/base/: default.yaml
docs/: algebra_backends.md  architecture.md  changelogs.md  compression_algorithm.md  evaluation.md  layer_types.md  logging.md  profiling.md  rank-selection.md  remote_runs.md  successful_runs.md
goldcrest/: __init__.py
goldcrest/config/: __init__.py  loader.py
goldcrest/framework/: __init__.py  compressed_io.py  context.py  eval_interface.py  events.py  inference_subprocess.py  layers.py  memory_profiler.py  model_manager.py  plugins.py  reproducibility.py  state.py  statistics.py  strategy_factory.py
goldcrest/orchestration/: __init__.py  executor.py  orchestrator.py  workflow.py
goldcrest/plugins/: __init__.py
scripts/logs/: gemma3_loop_results.csv
scripts/utils/: profile_inference_subprocess.py
src/: __init__.py
src/config/: __init__.py  loader.py
src/framework/: __init__.py  compressed_io.py  context.py  eval_interface.py  events.py  inference_subprocess.py  layers.py  memory_profiler.py  model_manager.py  plugins.py  reproducibility.py  state.py  statistics.py  strategy_factory.py
src/orchestration/: __init__.py  executor.py  orchestrator.py  workflow.py
src/plugins/: __init__.py
tests/compression/: test_calibration_collector.py  test_pruning.py
tests/e2e/: conftest.py  test_e2e_algebra_backends.py  test_e2e_compression_algorithms.py  (+4 more)
(+135 files in other folders)
